@@ -1,3 +1,12 @@
+Diskpoll 0.1.3, not yet released
+ - Fixed a serious bug. Diskpoll was not releasing file search handles, which
+   could lead to diskpoll not "seeing" some files in the outbound. This did
+   only occur on very large outbound directories. You should upgrade anyway!
+ - The UNIX version now is case-tolerant, i.e. it will recognise files and
+   directories no matter if they are in upper, lower or mixed case
+   correctly. This enables you to access a DOS or OS/2-style outbound
+   directory from a Unix machine.
+
 Diskpoll 0.1.2, Released 17 Nov 1998
  - New: If the binkley outbound contains a reference to a file that
    does not exist, the reference is removed from the flowfile. This
